--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ aside {
 
 html,
 body {
-    font-family: 'RobotoRegular', Arial, sans-serif;
+    font-family: 'RobotoRegular', Arial, Helvetica, sans-serif;
     height: 100%;
     width: 100%;
     font-size: 100%;
